# ethlisbon

./: README.md  aave-lending-rate-query.py  double-7-advanced.ipynb  double-7-ethlisbon.ipynb  pyproject.toml  query2.txt  query3.txt  query4.txt  rates.csv  strat.py  strategy.ipynb
.ipynb_checkpoints/: double-7-ethlisbon-checkpoint.ipynb
