[tool.poetry]
name = "ethlisbon"
version = "0.1.0"
description = ""
authors = ["Mikko Ohtamaa <mikko@opensourcehacker.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
ipdb = "^0.13.9"
tradingstrategy = {path = "../client", develop = true}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
